--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
 }
-.about {
+.about, .project {
     display: block;
     width: 350px;
     height: 450px;
@@ -20,7 +20,15 @@ body {
     padding: 5px;
     color: white;
 }
-.about h2 {
+.project {
+    min-height: 450px;
+    height: unset !important;
+    width: auto;
+    margin: 20px;
+    background: white;
+    color: black;
+}
+.about h2, .project h2 {
     text-transform: uppercase;
     font-weight: 500;
     text-align: center;
