--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@ body {
     height: unset !important;
     width: auto;
     margin: 20px;
-    background: white;
-    color: black;
+    padding: 10px;
+}
+.project a {
+    color: rgb(0, 132, 255);
+}
+.project h2 {
+    margin-bottom: 10px;
 }
 .about h2, .project h2 {
     text-transform: uppercase;
